r17 - april, 21, 2009
	* Association : actions > we delete all temporary data in session before
	  starting the registration of a new Association
	* Membre : actions > encrypt password before saving
	* MembreForm.class.php : the default values for mis_a_jour_par value is
	  defined in action
	* Membre : MAP action defined
	* lib/vendor/phoogle/phoogle.php : new library file created
	* settings.yml : new parameter "googlemap_key"
	* MembrePeer.php : new method doSelectForAssociation($id)
	* Membre.php : getCompleteAddress() method implemented
	
	
r16 - april, 20, 2009
	* web/js/jquery-ui-1.7.1 : 'demos' folder removed
	* web/js/jquery-ui-1.7.1 : 'docs' folder removed
	* web/js/jquery-ui-1.7.1 : 'css' folder removed (it was put in css folder)
	* Cotisation : appearance redone
	* CotisationTypeForm.class.php : all required updates have been done
	* frontConfiguration.class.php : define error messages for required/invalid
	  fields
	* CotisationType : actions > redirect to listing after form submit
	* MailingForm.class.php : rich editor configured
	* Association > actions > mailing > throw error messages if formulaire has
	  not been filled correctly
	* AssociationForm.class.php : website is validated by ValidatorUrl
	* Schema.yml : Membre.pseudo is set as an unique field
	* Association : new method initialize()
	* Schema.yml : Statut.mis_a_jour_par and Statut.enregistre_par can be set
	  to NULL (if this is a value that was set automatically)
	* Association : creation > the step of creation is now done by 2 steps
	  We first create the association and then the first Membre
	* MyUser.class.php : new method setTemporaryAssociationId($id)
	* Membre : actions > new action 'newfirst' to register the first Membre of
	  an Association
	* Membre : config/security.yml created to authorize access to action
	  newfirst
	* Membre : new view newfirstSuccess.php
	* Membre : actions > new action 'executeEndregistration'